--- a/playbooks/roles/osx/tasks/homebrew.yml
+++ b/playbooks/roles/osx/tasks/homebrew.yml
@@ -9,3 +9,10 @@
     - git
     - vim
     - zsh
+    - npm
+
+- name: Install npm packages
+  npm: name={{ item }} state=latest global=yes
+  with_items:
+    - raml2html
+    - raml2wiki
